--- a/webapp/style.css
+++ b/webapp/style.css
@@ -145,4 +145,11 @@
     top: -90px;
 }
 
-
+#Event{
+	height: 800px;
+    width: 340px;
+    border: 2px solid black;
+    position: absolute;
+    top: 500px;
+   
+}
