--- a/webapp/style.css
+++ b/webapp/style.css
@@ -1,155 +1,47 @@
-#User{
-	height: 300px;
-    width: 400px;
-    border: 2px solid black;
-    position: relative;
-
+body{
+    background: #67BE4B;
 }
-#User h2{
-	position: relative;
-    left: 160px;
+#container{
+    width:400px;
+    margin:0 auto;
+    margin-top:10%;
 }
-#name{
-	position: relative;
-    left: 10px;
-
+/* Bordered form */
+form {
+    width:100%;
+    padding: 30px;
+    border: 1px solid #f1f1f1;
+    background: #fff;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-#Personnal{
-	height: 506px;
-    width: 340px;
-    border: 2px solid black;
-    position: absolute;
-    left: 1132px;
-    top: 80px;
-}
-#Personnal h2{
-	position: relative;
-	left: 83px;
-}
-#ChooseMaps{
-	position: relative;
-    left: 20px;
-}
-#Personnal input{
-    position: relative;
-    left: 23px;
-}
-#AddMap{
-    position: relative;
-    left: 26px;
-}
-#log{
-    position: relative;
-    left: 19px;
-    top: 32px;
-    height: 20px;
-}
-#PersonnalMaps{
-	position: relative;
-	left: 87px;
-	height: 200px;
-	width: 1300px;
-	border : 1px;
-	top: 25px;
-	
-}
-#DeleteMap{
-	position: relative;
-    top: 30px;
-    right: 24px;
-}
-#Shared{
-	width: 317px;
-	border: 2px solid black;
-	position: absolute;
-    top: 80px;
-    left: 1483px;
-}
-#Shared h2{
-	position: relative;
-	left: 90px;
-}
-#MapSharedToHim{
-	position: relative;
-	left: 80px;
-	height: 308px;
+#container h1{
+    width: 38%;
+    margin: 0 auto;
+    padding-bottom: 10px;
 }
 
-#Shared input{
-	position: relative;
-	left: 16px;
-}
-#logShared{
-	height: 20px;
-}
-
-#ChooseSharedMaps{
-	position: relative;
-	left: 12px;
-
-}
-#AddSharedMap{
-	position: relative;
-	left: 16px;
-}
-#DeleteSharedMap{
-	position: relative;
-    top: 10px;
-    left: 10px;
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
 
-#Map{
-	height: 400px;
-    width: 700px;
-    position: absolute;
-    top: 80px;
-    left: 420px;
-    border: 2px solid black;
+/* Set a style for all buttons */
+input[type=submit] {
+    background-color: #4682B4	;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
 }
-#MapName{
-    position: relative;
-    left: 10px;
-}
-
-#Description{
-	position: relative;
-    left: 10px;
-    bottom: -10px;
-}
-
-#Status{
-	position: relative;
-    top: -80px;
-    left: 550px;
-}
-#Location{
-    position: relative;
-    left: 10px;
-    bottom: -50px;
-}
-
-#SharedWith{
-    position: relative;
-    bottom: -120px;
-    left: 10px;
-}
-
-#SetMapName{
-	position: relative;
-    top: -90px;
-    left: 10px;	
-}
-#Map input{
-	position: relative;
-    left: 10px;
-    top: -90px;
-}
-
-#Event{
-	height: 800px;
-    width: 340px;
-    border: 2px solid black;
-    position: absolute;
-    top: 500px;
-   
+input[type=submit]:hover {
+    background-color: white;
+    color: #4682B4	;
+    border: 1px solid #4682B4	;
 }
